# LeanStateSearch

./: Makefile  README.md  llms.txt
lean-state-search/: package.json  pnpm-lock.yaml
scripts/: setup_model.py
state-search-be/: main.py  pyproject.toml
state-search-be/scripts/: upload_theorem.py
