[project]
name = "state_search_be"
version = "0.1.0"
description = "Backend service for Lean State Search"
readme = "README.md"
requires-python = ">=3.11, <3.13"
authors = [{ name = "timechess", email = "tyc221@ruc.edu.cn" }]
dependencies = [
    "grpcio>=1.69",
    "grpcio-tools>=1.69",
    "jsonlines>=4.0",
    "prisma>=0.15",
    "protobuf>=5.29",
    "python-dotenv>=1.0",
    "sentence-transformers>=3.3",
    "qdrant-client>=1.13",
]

[tool.hatch.build]
# Explicitly include the nested proto-generated package as well.
include = ["state_search_be/**/*.py", "state_search_be/state_search/**/*.py"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
path = "state_search_be/__init__.py"

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = ["tests/", "**/__pycache__/", ".venv/", "dist/", "state_search"]
